# ChangeLog for app-portage/layman
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/layman/ChangeLog,v 1.53 2007/10/26 11:28:44 wrobel Exp $

  26 Oct 2007; wrobel@gentoo.org Manifest:
  Let my last repo commit hang in limbo. Digest update.

  26 Oct 2007; wrobel@gentoo.org layman-1.1.1.ebuild:
  Updated WebDAV check for newer subversion ebuilds. Submitted by A. F. T.
  Arahesis <arfrever.fta (at) gmail.com>

  20 Oct 2007; <wrobel@gentoo.org> layman-1.0.6.ebuild,
  layman-1.0.10.ebuild, layman-1.1.1.ebuild:
  Add the subversion dependency when testing (#196030).

  19 Oct 2007; Raúl Porcel <armin76@gentoo.org> layman-1.1.1.ebuild:
  alpha/ia64 stable wrt #196030

  19 Oct 2007; Ferris McCormick <fmccor@gentoo.org> layman-1.1.1.ebuild:
  Sparc stable --- Bug #196030 --- been good over a month.

  19 Oct 2007; nixnut <nixnut@gentoo.org> layman-1.1.1.ebuild:
  Stable on ppc wrt bug 196030

  17 Oct 2007; Chris Gianelloni <wolf31o2@gentoo.org> layman-1.1.1.ebuild:
  Stable on amd64 wrt bug #196030.

  16 Oct 2007; Dawid Węgliński <cla@gentoo.org> layman-1.1.1.ebuild:
  Stable on x86 (bug #196030)

  16 Oct 2007; Markus Rothe <corsair@gentoo.org> layman-1.1.1.ebuild:
  Stable on ppc64; bug #196030

*layman-1.1.1 (12 Sep 2007)

  12 Sep 2007; <wrobel@gentoo.org> -layman-1.1.ebuild, +layman-1.1.1.ebuild:
  Added layman-1.1.1 to the tree, removed layman-1.1.

  11 Sep 2007; <wrobel@gentoo.org> layman-1.1.ebuild:
  Added the ~ia64 keyword back in since I accidently removed it.

*layman-1.1 (11 Sep 2007)

  11 Sep 2007; <wrobel@gentoo.org> -layman-1.0.99.ebuild,
  +layman-1.1.ebuild:
  Added layman-1.1 to the tree, removed 1.0.99.

  24 May 2007; Bryan Østergaard <kloeri@gentoo.org> layman-1.0.10.ebuild:
  Add ~ia64 keyword.

  15 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add <herd>no-herd</herd>

  11 May 2007; Jose Luis Rivero <yoswink@gentoo.org> layman-1.0.10.ebuild: